<resources>
    <string name="app_name">squareBracket</string>
    <string name="title_activity_first">MainActivity</string>
    <string name="title_last_videos">Home</string>
    <string name="title_featured">Explore</string>
    <string name="title_my_profile">You</string>
    <string name="placeholder_title">Upload title</string>
    <string name="placeholder_desc">Upload description</string>
    <string name="placeholder_uploader">Author Username</string>
    <string name="placeholder_logged">Logged In Username</string>
    <string name="placeholder_joined">Joined sometime ago</string>
</resources>