<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/player_container"
        android:name="com.gamerappa.squarebracket.ui.video.PlayerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/video_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/video_detail_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/placeholder_uploader"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/video_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_desc"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>